fix recaptcha misalignment

--- a/public/stylesheets/firehoze.less
+++ b/public/stylesheets/firehoze.less
@@ -2536,6 +2536,11 @@ background: url('/stylesheets/images/tooltip/black-arrow-big-br.png') no-repeat 
   font-weight:bold;
 }
 
+div.fh-form div#recaptcha_area {
+  border: solid 1px @gray-80;
+  margin-left: 175px;
+}
+
 .fh-form .help {
   margin-left:175px;
   display:block;
